--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
 ijson~=3.3.0
+numpy~=2.2.4
+tqdm~=4.67.1
+torch~=2.6.0+cu126
+matplotlib~=3.10.1
+pandas~=2.2.3
+scikit-learn~=1.6.1
+seaborn~=0.13.2
